# adapt-ai

./: .env.example  README.md  docker-compose.yml  function-documentation.md  memory-schema.md  scene-transitions.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/authenticate/: models.py  serializers.py  urls.py  views.py
backend/authenticate/management/commands/: show_urls.py
backend/authenticate/migrations/: 0001_initial.py  0002_customuser_code_expiry_time.py  0003_remove_customuser_is_active_and_more.py  0004_customuser_date_joined_customuser_groups_and_more.py
backend/settings/: __init__.py  settings.py  urls.py
backend/tools/: agent.py  functions.py  models.py  prompts.py  tasks.py  urls.py  views.py
backend/tools/migrations/: 0001_initial.py  0002_conversationmessage_ai_action_log_and_more.py  0002_conversationmessage_ai_response_and_more.py  0003_alter_conversationmessage_ai_action_log_and_more.py  0003_remove_conversationmessage_user.py
frontend/: Dockerfile
frontend/src/pages/: Auth.tsx
