[project]
name = "backend"
version = "1.8.5"
description = "Elevenlabs hackathon: Project ADAPT-AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "channels>=4.2.0",
    "cors>=1.0.1",
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt[blacklist]>=5.4.0",
    "djoser>=2.3.1",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.4",
    "python-dotenv>=1.0.1",
]
